rewrite TestProofScriptCommand.java with standard tech