@@ -12,13 +12,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import de.uka.ilkd.key.control.DefaultUserInterfaceControl;
 import de.uka.ilkd.key.control.KeYEnvironment;
-import de.uka.ilkd.key.java.Position;
-import de.uka.ilkd.key.parser.Location;
+import de.uka.ilkd.key.nparser.ParsingFacade;
 import de.uka.ilkd.key.proof.Goal;
 import de.uka.ilkd.key.proof.Proof;
 import de.uka.ilkd.key.smt.newsmt2.MasterHandlerTest;
@@ -31,82 +33,75 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assumptions.assumeThat;
 
 
 /**
  * see {@link MasterHandlerTest} from where I copied quite a bit.
  */
 public class TestProofScriptCommand {
+    public record TestInstance(String name, String key, String script, String exception,
+                               String[] goals, Integer selectedGoal) {
+    }
+
+
     public static List<Arguments> data() throws IOException, URISyntaxException {
-        URL url = TestProofScriptCommand.class.getResource("cases");
+        URL url = TestProofScriptCommand.class.getResource("cases.yml");
         if (url == null) {
             throw new FileNotFoundException("Cannot find resource 'cases'.");
         }
 
-        if (!url.getProtocol().equals("file")) {
-            throw new IOException("Resource should be a file URL not " + url);
-        }
-
-        Path directory = Paths.get(url.toURI());
-        assertTrue(Files.isDirectory(directory));
-        try (var s = Files.list(directory)) {
-            return s.map(f -> Arguments.of(f.getFileName().toString(), f))
-                    .collect(Collectors.toList());
-        }
+        var objectMapper = new ObjectMapper(new YAMLFactory());
+        objectMapper.findAndRegisterModules();
+        TestInstance[] instances = objectMapper.readValue(url, TestInstance[].class);
+        return Arrays.stream(instances).map(Arguments::of).toList();
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    void testProofScript(String name, Path path) throws Exception {
-
-        BufferedReader reader = Files.newBufferedReader(path);
-        LineProperties props = new LineProperties();
-        props.read(reader);
-
-        List<String> lines = new ArrayList<>(props.getLines("KeY"));
+    void testProofScript(TestInstance data) throws Exception {
+        var name = data.name();
         Path tmpKey = Files.createTempFile("proofscript_key_" + name, ".key");
-        Files.write(tmpKey, lines);
+        Files.writeString(tmpKey, data.key());
 
         KeYEnvironment<DefaultUserInterfaceControl> env = KeYEnvironment.load(tmpKey.toFile());
 
         Proof proof = env.getLoadedProof();
 
-        String script = props.get("script");
-        ProofScriptEngine pse =
-            new ProofScriptEngine(script,
-                new Location(path.toUri(), Position.newOneBased(1, 1)));
+        var script = ParsingFacade.parseScript(data.script());
+        ProofScriptEngine pse = new ProofScriptEngine(script);
 
+        boolean hasException = data.exception() != null;
         try {
             pse.execute(env.getUi(), proof);
         } catch (Exception ex) {
-            assertTrue(props.containsKey("exception"), "unexpected exception");
-            Assertions.assertEquals(ex.getMessage(), props.get("exception").trim());
+            ex.printStackTrace();
+            assertTrue(hasException,
+                    "An exception was not expected, but got " + ex.getClass());
+            assertThat(ex.getMessage().trim().replace("\r\n","\n"))
+                    .startsWithIgnoringCase(data.exception().trim());
             return;
         }
 
-        Assertions.assertFalse(props.containsKey("exception"),
-            "exception would have been expected");
+        Assertions.assertFalse(hasException,
+                "exception would have been expected");
 
-        ImmutableList<Goal> goals = proof.openGoals();
-        if (props.containsKey("goals")) {
-            int expected = Integer.parseInt(props.get("goals").trim());
+        if (data.goals() != null) {
+            ImmutableList<Goal> goals = proof.openGoals();
+            int expected = data.goals().length;
             Assertions.assertEquals(expected, goals.size());
-        }
 
+            for (String expectedGoal : data.goals()) {
+                assertThat(goals.head().toString().trim()).isEqualTo(expectedGoal);
+                goals = goals.tail();
+            }
 
-        int no = 1;
-        while (props.containsKey("goal " + no)) {
-            String expected = props.get("goal " + no).trim();
-            Assertions.assertEquals(expected, goals.head().toString().trim(), "goal " + no);
-            goals = goals.tail();
-            no++;
-        }
-
-        if (props.containsKey("selected")) {
-            Goal goal = pse.getStateMap().getFirstOpenAutomaticGoal();
-            String expected = props.get("selected").trim();
-            Assertions.assertEquals(expected, goal.toString().trim());
+            if (data.selectedGoal() != null) {
+                Goal goal = pse.getStateMap().getFirstOpenAutomaticGoal();
+                assertThat(goal.toString().trim()).isEqualTo(data.goals()[data.selectedGoal()]);
+            }
         }
     }
 
